   in the Add-ons window and AVIM's options pane.
 - AVIM's logo is now displayed in the Add-ons window even when the extension is
   disabled.
 - The Script Monitor can now disable VietUni 1.7 in webpages.

Version ${Version} (${Date})
 - Restored support for Firefox 2 after nearly two years. (Welcome back, Windows
   98 users!) Older versions of other Mozilla-based applications are now
   supported too.
 - Added support for beta versions of Firefox 4.
 - Renamed the "Auto" input method to "Mixed".
 - Overhauled the preferences dialog. The reorganized and rewritten dialog is
   easier to understand and much more reliable. It also includes script monitor
   options that before were only accessible through about:config.
 - Added a Dutch localization by John Willemse.
 - Removed the French and Chinese localizations, which are not being maintained.
   If you are interested in bringing these localizations back, please contact
   Minh.
 - Added support for the HTML5 search box, URL, and e-mail address controls.
 - Shift+Backspace (Shift+Del on the Mac) now removes a diacritical mark from
   the preceding word like GoTiengVietFx does.
 - Removed Bespin support, which is incompatible with recent "Bespin Reloaded"
   releases.
 - Moved the Mudim compatibility warning from AVIM's preferences dialog to the
   main Add-ons window.  (The compatibility warning is not available in Firefox
   4.)
 - Added a help button to the preferences dialog that opens AVIM help
   documentation in a new window.
 - The Script Monitor can now disable Google Virtual Keyboard in webpages.
 - Added a button to Fennec's right toolbar for enabling and disabling AVIM.
 - Fixed the input method menu in the options panel in Fennec.
 - Added an option to recognize password boxes to the options panel in Fennec.
 - Fixed a regression in SeaMonkey where icons would not appear for the toolbar
   buttons except in the Customize Toolbar dialog.