@@ -324,6 +324,7 @@ Version ${Version} (${Date})
  - Added support for the HTML5 search box, URL, and e-mail address controls.
  - Shift+Backspace (Shift+Del on the Mac) now removes a diacritical mark from
    the preceding word like GoTiengVietFx does.
+ - Added support for rectangular selection in Komodo IDE and Komodo Edit.
  - Removed Bespin support, which is incompatible with recent "Bespin Reloaded"
    releases.
  - Moved the Mudim compatibility warning from AVIM's preferences dialog to the
